# opensarlab-lib

./: .gitignore  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.py
opensarlab_lib/: __init__.py  aoi.py  aoi_selectors.py  config.py  custom_exceptions.py  edl.py  gdal_wrap.py  hyp3_wrap.py  osl-gdal.py  plot.py  product_name_parse.py  products.py  selectors.py  util.py  widgets.py
tests/: test_util.py
