[build-system]
requires = [
  "setuptools>=61",
  "setuptools_scm[toml]>=6.3",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "opensarlab_lib"
description = "A Python library to support ASF OpenSARlab's Jupyter Notebook repository https://github.com/ASFOpenSARlab/opensarlab-notebooks"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
  { name = "ASF OpenSARlab Team", email = "uaf-jupyterhub-asf@alaska.edu" }
]
requires-python = ">=3.9"
dynamic = ["version"]

dependencies = [
  "asf_search",
  "cartopy",
  "contextily",
  "gdal",
  "hyp3_sdk",
  "ipywidgets",
  "IPython",
  "matplotlib",
  "numpy",
  "pandas",
  "pyproj",
  "requests",
  "shapely",
  "pyshp"
]

classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["opensarlab_lib*"]

[tool.setuptools_scm]
write_to = "opensarlab_lib/_version.py"
